<resources>
    <string name="app_name">LoanAppSameed</string>
    <string name="profile_activity_menu_item_title">Item</string>
    <string name="splash_activity_pear2pear_text_view_hint">Pear2Pear</string>
    <string name="splash_activity_pear2pear_text_view_text">Pear2Pear</string>
    <string name="borrower_reject_page_activity_automobile_text_view_hint">Automobile</string>
    <string name="borrower_reject_page_activity_text_view_two_text_view_text">$ 35,000</string>
    <string name="borrower_reject_page_activity_cancel_button_text">Cancel</string>
    <string name="borrower_reject_page_activity_text_view_text_view_text">200%</string>
    <string name="borrower_reject_page_activity_ratio_loan_asset_text_view_text">Ratio Loan / Asset</string>
    <string name="borrower_reject_page_activity_cancel_button_hint">Cancel</string>
    <string name="borrower_reject_page_activity_counter_button_text">Counter</string>
    <string name="borrower_reject_page_activity_collateral_text_view_text">Collateral</string>
    <string name="borrower_reject_page_activity_no_loan_available_text_view_hint">No loan available ( Rejected )</string>
    <string name="borrower_reject_page_activity_usd_text_view_text">$30,000,00 USD</string>
    <string name="borrower_reject_page_activity_usd_text_view_hint">$30,000,00 USD</string>
    <string name="borrower_reject_page_activity_loan_request_text_view_hint">Loan Request </string>
    <string name="borrower_reject_page_activity_company_private_text_view_text">Company / Private</string>
    <string name="borrower_reject_page_activity_repost_button_hint">Repost</string>
    <string name="borrower_reject_page_activity_loan_request_text_view_text">Loan Request </string>
    <string name="borrower_reject_page_activity_counter_button_hint">Counter</string>
    <string name="borrower_reject_page_activity_borrower_text_view_text">Borrower </string>
    <string name="borrower_reject_page_activity_company_private_text_view_hint">Company / Private</string>
    <string name="borrower_reject_page_activity_no_loan_available_text_view_text">No loan available ( Rejected )</string>
    <string name="borrower_reject_page_activity_requested_amount_for_text_view_hint">Requested amount for loan</string>
    <string name="borrower_reject_page_activity_automobile_text_view_text">Automobile</string>
    <string name="borrower_reject_page_activity_text_view_text_view_hint">200%</string>
    <string name="borrower_reject_page_activity_requested_amount_for_text_view_text">Requested amount for loan</string>
    <string name="borrower_reject_page_activity_repost_button_text">Repost</string>
    <string name="borrower_reject_page_activity_ratio_loan_asset_text_view_hint">Ratio Loan / Asset</string>
    <string name="borrower_reject_page_activity_market_value_text_view_text">Market Value</string>
    <string name="borrower_reject_page_activity_borrower_text_view_hint">Borrower </string>
    <string name="borrower_reject_page_activity_collateral_text_view_hint">Collateral</string>
    <string name="borrower_reject_page_activity_market_value_text_view_hint">Market Value</string>
    <string name="borrower_reject_page_activity_text_view_two_text_view_hint">$ 35,000</string>
    <string name="lender_review_page_activity_ratio_loan_asset_text_view_text">Ratio Loan / Asset</string>
    <string name="lender_review_page_activity_loan_amount_text_view_text">Loan Amount</string>
    <string name="lender_review_page_activity_automobile_text_view_hint">Automobile</string>
    <string name="lender_review_page_activity_due_date_text_view_text">Due Date</string>
    <string name="lender_review_page_activity_dec302019_text_view_text">Dec 30, 2019</string>
    <string name="lender_review_page_activity_commercial_use_text_view_text">Commercial Use</string>
    <string name="lender_review_page_activity_text_view_three_text_view_text">$ 35,000</string>
    <string name="lender_review_page_activity_due_date_text_view_hint">Due Date</string>
    <string name="lender_review_page_activity_text_view_text_view_text">200%</string>
    <string name="lender_review_page_activity_text_view_three_text_view_hint">$ 35,000</string>
    <string name="lender_review_page_activity_borrowing_rate_text_view_hint">Borrowing Rate</string>
    <string name="lender_review_page_activity_text_view_two_text_view_text">10%</string>
    <string name="lender_review_page_activity_commercial_use_text_view_hint">Commercial Use</string>
    <string name="lender_review_page_activity_purpose_of_loan_text_view_hint">Purpose of Loan</string>
    <string name="lender_review_page_activity_market_value_text_view_hint">Market Value</string>
    <string name="lender_review_page_activity_borrowing_rate_text_view_text">Borrowing Rate</string>
    <string name="lender_review_page_activity_text_view_two_text_view_hint">10%</string>
    <string name="lender_review_page_activity_borrower_text_view_text">Borrower </string>
    <string name="lender_review_page_activity_verification_status_text_view_hint">Verification Status : </string>
    <string name="lender_review_page_activity_review_text_view_hint">Review</string>
    <string name="lender_review_page_activity_company_private_text_view_text">Company / Private</string>
    <string name="lender_review_page_activity_text_view_text_view_hint">200%</string>
    <string name="lender_review_page_activity_reject_text_view_hint">Reject</string>
    <string name="lender_review_page_activity_accept_text_view_hint">Accept</string>
    <string name="lender_review_page_activity_review_request_text_view_text">Review Request</string>
    <string name="lender_review_page_activity_review_request_text_view_hint">Review Request</string>
    <string name="lender_review_page_activity_reject_button_text">x</string>
    <string name="lender_review_page_activity_market_value_text_view_text">Market Value</string>
    <string name="lender_review_page_activity_ratio_loan_asset_text_view_hint">Ratio Loan / Asset</string>
    <string name="lender_review_page_activity_verification_status_text_view_text">Verification Status : </string>
    <string name="lender_review_page_activity_usd_text_view_hint">$30,000 USD</string>
    <string name="lender_review_page_activity_loan_amount_text_view_hint">Loan Amount</string>
    <string name="lender_review_page_activity_purpose_of_loan_text_view_text">Purpose of Loan</string>
    <string name="lender_review_page_activity_accept_text_view_text">Accept</string>
    <string name="lender_review_page_activity_company_private_text_view_hint">Company / Private</string>
    <string name="lender_review_page_activity_reject_text_view_text">Reject</string>
    <string name="lender_review_page_activity_usd_text_view_text">$30,000 USD</string>
    <string name="lender_review_page_activity_review_text_view_text">Review</string>
    <string name="lender_review_page_activity_borrower_text_view_hint">Borrower </string>
    <string name="lender_review_page_activity_collateral_text_view_text">Collateral</string>
    <string name="lender_review_page_activity_automobile_text_view_text">Automobile</string>
    <string name="lender_review_page_activity_dec302019_text_view_hint">Dec 30, 2019</string>
    <string name="lender_review_page_activity_collateral_text_view_hint">Collateral</string>
    <string name="lender_review_page_activity_reject_button_hint">x</string>
    <string name="signup_activity_last_name_edit_text_hint">Last Name</string>
    <string name="signup_activity_first_name_edit_text_hint">First Name</string>
    <string name="signup_activity_confirm_password_edit_text_hint">Confirm Password</string>
    <string name="signup_activity_welcome_signup_text_view_hint">Welcome to Signup</string>
    <string name="signup_activity_signupbtn_button_hint">Signup</string>
    <string name="signup_activity_welcome_signup_text_view_text">Select Image</string>
    <string name="signup_activity_password_edit_text_hint">Password</string>
    <string name="signup_activity_signup_text_view_hint">Signup</string>
    <string name="signup_activity_already_amember_login_button_hint">Already a member? Login</string>
    <string name="signup_activity_field_of_activity_edit_text_hint">Field Of Activity</string>
    <string name="signup_activity_phone_edit_text_hint">Phone</string>
    <string name="signup_activity_signup_text_view_text">Signup</string>
    <string name="signup_activity_whatyoupretend_edit_text_hint">What You Pretend</string>
    <string name="signup_activity_signupbtn_button_text">Signup</string>
    <string name="signup_activity_email_edit_text_hint">Last Name</string>
    <string name="signup_activity_address_edit_text_hint">Address</string>
    <string name="signup_activity_already_amember_login_button_text">Already a member? Login</string>
    <string name="profile_activity_change_your_notifica_text_view_text">Change your notification settings</string>
    <string name="profile_activity_home_text_view_text">Home</string>
    <string name="profile_activity_change_your_password_text_view_text">Change your password</string>
    <string name="profile_activity_ricardo_joseph_text_view_text">Ricardo Joseph</string>
    <string name="profile_activity_general_text_view_text">GENERAL</string>
    <string name="profile_activity_expenses_text_view_text">Expenses</string>
    <string name="profile_activity_update_and_modify_yo_text_view_text">Update and modify your profile</string>
    <string name="profile_activity_profile_settings_button_hint">Profile Settings</string>
    <string name="profile_activity_change_your_notifica_text_view_hint">Change your notification settings</string>
    <string name="profile_activity_profile_text_view_text">Profile</string>
    <string name="profile_activity_privacy_button_hint">Privacy</string>
    <string name="profile_activity_ricardo_joseph_text_view_hint">Ricardo Joseph</string>
    <string name="profile_activity_general_text_view_hint">GENERAL</string>
    <string name="profile_activity_notifications_button_text">Notifications</string>
    <string name="profile_activity_ricardojoseph_gmail_text_view_text">ricardojoseph@gmail.com</string>
    <string name="profile_activity_wallet_text_view_hint">Wallet</string>
    <string name="profile_activity_profile_two_text_view_hint">Profile</string>
    <string name="profile_activity_profile_text_view_hint">Profile</string>
    <string name="profile_activity_profile_two_text_view_text">Profile</string>
    <string name="profile_activity_home_text_view_hint">Home</string>
    <string name="profile_activity_notifications_button_hint">Notifications</string>
    <string name="profile_activity_profile_settings_button_text">Profile Settings</string>
    <string name="profile_activity_update_and_modify_yo_text_view_hint">Update and modify your profile</string>
    <string name="profile_activity_wallet_text_view_text">Wallet</string>
    <string name="profile_activity_change_your_password_text_view_hint">Change your password</string>
    <string name="profile_activity_ricardojoseph_gmail_text_view_hint">ricardojoseph@gmail.com</string>
    <string name="profile_activity_privacy_button_text">Privacy</string>
    <string name="profile_activity_expenses_text_view_hint">Expenses</string>
    <string name="login_activity_welcome_login_text_view_text">Welcome to Login</string>
    <string name="login_activity_don_thave_aaccount_sign_up_button_hint">Don’t have a account? Sign up</string>
    <string name="login_activity_forgot_password_button_text">Forgot password?</string>
    <string name="login_activity_password_edit_text_hint">Password</string>
    <string name="login_activity_don_thave_aaccount_sign_up_button_text">Don’t have a account? Sign up</string>
    <string name="login_activity_login_button_hint">Login</string>
    <string name="login_activity_login_button_text">Login</string>
    <string name="login_activity_username_edit_text_hint">Email</string>
</resources>